# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fenc=utf-8 sts=4 ts=4 et nomod:

2022-09-12 Michael Truog   <mjtruog at protonmail dot com>

    * Add outages text visual representation to the CloudI Service API
      services_status response for service restarts
    * Add outages text visual representation to the
      cloudi_service_health_check hosts information

2022-09-09 Michael Truog   <mjtruog at protonmail dot com>

    * Add cloudi_service_health_check error_level argument and
      additional debug log output
    * Fix Haskell CloudI API 9.x warning

2022-09-08 Michael Truog   <mjtruog at protonmail dot com>

    * Add cloudi_service_health_check ping health functionality

2022-09-07 Michael Truog   <mjtruog at protonmail dot com>

    * Add cloudi_service_health_check log output for the
      timeout value when a TCP timeout occurs
    * Add CloudI Service API services_status response size_erlang
      value Erlang type specification

2022-09-06 Michael Truog   <mjtruog at protonmail dot com>

    * Fix the logging_set CloudI Service API usage of file_sync
      configuration
    * Improve cloudi_service_health_check interval timing

2022-09-03 Michael Truog   <mjtruog at protonmail dot com>

    * Change CloudI API parameter name pid to source
    * Improve cloudi_service_health_check
        * Ensure host ip addresses are ordered and unique
        * Add environment variable use in hostnames

2022-09-02 Michael Truog   <mjtruog at protonmail dot com>

    * Improve cloudi shell script environment variable cleanup

2022-09-01 Michael Truog   <mjtruog at protonmail dot com>

    * Add the cloudi_service_health_check arguments
      dns_ip_added, dns_ip_removed_healthy and dns_ip_removed_failed
      for tracking DNS lookup response changes
    * Improve cloudi_service_health_check logging level use

2022-08-31 Michael Truog   <mjtruog at protonmail dot com>

    * Add cloudi_availability as a module for usage in internal